# fresh-audit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
auditor_client/: app.js  index.html
backend/: crud.py  database.py  main.py  models.py
